Bug 158121 - Math - Print settings not read after changing
Summary: Math - Print settings not read after changing
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.2.0.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.4 target:24.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Options-Dialog
  Show dependency treegraph
 
Reported: 2023-11-08 18:03 UTC by Gabor Kelemen (Collabora)
Modified: 2023-11-14 10:16 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Math settings before closing the dialog (78.56 KB, image/png)
2023-11-08 18:03 UTC, Gabor Kelemen (Collabora)
Details
Math settings after closing the dialog, two boxes are now empty (63.60 KB, image/png)
2023-11-08 18:04 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-11-08 18:03:39 UTC
Created attachment 190730 [details]
Math settings before closing the dialog

1. Open a new Math document
2. Go to Options - Math - Settings
3. Enable the 3 Print settings at the top of the dialog: Title row, Formula text and Border
4. Press OK and reopen Options - Math - Settings
-> The Title row box is checked but the Formula text and Border are unchecked.

The relevant settings in Expert Settings (ooO.Math::Print::Title, FormulaText, Frame) are having the "true" value, so just the dialog is not reading them back correctly.

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 97b6b6b16c4b623f8a34393a906272439a7f0314
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: hu-HU
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2023-11-08 18:04:06 UTC
Created attachment 190731 [details]
Math settings after closing the dialog, two boxes are now empty
Comment 2 raal 2023-11-08 19:12:09 UTC
Confirm with Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 41d9584179ef7b4e18eda47c2c0a955df8c087a5
CPU threads: 4; OS: Linux 6.2; UI render: default; VCL: x11
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 3 raal 2023-11-08 19:15:53 UTC
Works in Version: 4.1.0.0.alpha1+
Build ID: 5e77c9e17ba7dd9d296c9b755093f01e7eb4f51
Comment 4 raal 2023-11-08 19:29:05 UTC
This seems to have begun at the below commit in bibisect repository/OS bibisect-linux-64-6.1.
Adding Cc: to Caolán McNamara ; Could you possibly take a look at this one?
Thanks
 b72718186e6bd2457da3fe0b8205b76f740ea0b8 is the first bad commit
commit b72718186e6bd2457da3fe0b8205b76f740ea0b8
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Sun Apr 22 22:05:49 2018 +0200

    source 60f3e4b843da89678e022eed837ee66e726b1920

53193: place an intermediate class as parent for SfxTabPages | https://gerrit.libreoffice.org/c/core/+/53193
Comment 5 Caolán McNamara 2023-11-14 09:27:48 UTC
https://gerrit.libreoffice.org/c/core/+/159402 for this
Comment 6 Commit Notification 2023-11-14 10:16:11 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/e9441aef95c31afcc155a0076cf34521d605e5a2

Resolves: tdf#158121 Math - Print settings not read after changing

It will be available in 7.6.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2023-11-14 10:16:14 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/738e342f3e68020bb84b45db1e68b3efd0057a12

Resolves: tdf#158121 Math - Print settings not read after changing

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.