Resolves: tdf#158121 Math - Print settings not read after changing

Change-Id: I4effa4905f05a8a6105d4283c0a3b5ba8dd4d31d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/159403
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
Tested-by: Jenkins